<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="0dp"
    tools:context=".AlarmsActivity">


    <ImageButton
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/cyan_black"
        android:clickable="true"
        android:src="@drawable/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/wellcomeField"
        android:textColor="@color/white"
        android:textSize="40dp"
        app:layout_constraintBottom_toTopOf="@id/textView4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/chooseField"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@id/menu"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_alarms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/gray"
            android:backgroundTint="@color/black_low"
            android:text="@string/alarmsButton"
            android:textAllCaps="false"
            android:textColorHighlight="@color/black_low"
            android:textColorLink="@color/gray" />

        <Button
            android:id="@+id/button_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/gray"
            android:text="@string/eventsButton"
            android:textAllCaps="false"
            android:textColorLink="@color/gray" />

        <Button
            android:id="@+id/button_kinds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/gray"
            android:backgroundTint="@color/gray"
            android:text="@string/typeOfAlarmsButton"
            android:textAllCaps="false"
            android:textColorHighlight="@color/gray" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>