<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="0dp"
    tools:context=".AlarmsActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/superior"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/time"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="344dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@+id/superior"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:id="@+id/alarm_item1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="40dp"
            android:backgroundTint="@color/gray"
            android:orientation="vertical"
            android:paddingLeft="0dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="0dp"
                android:layout_marginRight="60dp"
                android:layout_marginBottom="80dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:text="@string/emailField"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@drawable/login_form_ground"
                android:ems="10"
                android:hint="@string/emailPlaceholder"
                android:inputType="textPersonName"
                android:textColor="@android:color/darker_gray"
                android:textSize="18dp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/alarm_item2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="40dp"
            android:backgroundTint="@color/gray"
            android:orientation="vertical"
            android:paddingLeft="0dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="0dp"
                android:layout_marginRight="60dp"
                android:layout_marginBottom="80dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:text="@string/passwordField"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@drawable/login_form_ground"
                android:ems="10"
                android:hint="@string/passwordPlaceholder"
                android:inputType="textPersonName"
                android:textColor="@android:color/darker_gray"
                android:textSize="18dp" />


        </LinearLayout>


    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/form">

        <Button
            android:id="@+id/recoveryButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:text="@string/recoverPasswordButton"
            android:textAllCaps="false"
            android:textColor="@color/black_low"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@id/ingressButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/ingressButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingressButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recoveryButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>