<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="0dp"
    tools:context=".AlarmsActivity">

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:buttonTint="@color/black_low"
        android:checked="true"
        android:theme="@style/SwitchTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/alarm_item3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="60dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/gray"
        android:orientation="horizontal"
        android:paddingLeft="0dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="60dp">

        <EditText
            android:id="@+id/editTextHour"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="6dp"
            android:maxLength="2"
            android:layout_weight="1"
            android:background="@drawable/login_form_ground"
            android:ems="10"
            android:text="@string/hoursTextEdit"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text=":"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextMinute"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:maxLength="2"
            android:layout_weight="1"
            android:background="@drawable/login_form_ground"
            android:ems="10"
            android:text="@string/hoursTextEdit"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
            android:textSize="18dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">



            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:saveEnabled="true"
                android:selectAllOnFocus="false"
                android:text="AM"
                android:buttonTint="@color/black_low"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="PM"
                android:buttonTint="@color/black_low"
                android:textColor="@color/white" />

        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/alarm_item1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:orientation="horizontal"
        android:paddingLeft="0dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/alarm_item3">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/nameField"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/login_form_ground"
            android:text="@string/alarm1Text"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textSize="14dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/alarm_item5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:paddingLeft="0dp"
        app:layout_constraintTop_toBottomOf="@+id/alarm_item1">


        <TextView
            android:id="@+id/textViewType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/typeField"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/planets_spinner"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/login_form_ground"
            android:drawSelectorOnTop="true"
            android:entries="@array/array_type_selected"
            android:textColor="@color/gray"
            android:textSize="18sp" />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/alarm_events"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:paddingLeft="0dp"
        app:layout_constraintTop_toBottomOf="@+id/alarm_item5">


        <TextView
            android:id="@+id/textViewTypeEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/eventField"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/events_spinner"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/login_form_ground"
            android:drawSelectorOnTop="true"
            android:entries="@array/array_event_selected"
            android:textColor="@color/gray"
            android:textSize="18sp" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/alarm_sounds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:paddingLeft="0dp"
        app:layout_constraintTop_toBottomOf="@+id/alarm_events">


        <TextView
            android:id="@+id/textViewTypeSounds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/soundField"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/sounds_spinner"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/login_form_ground"
            android:drawSelectorOnTop="true"
            android:entries="@array/array_sound_selected"
            android:textColor="@color/gray"
            android:textSize="18sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/alarm_reto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/gray"
        android:orientation="horizontal"
        android:paddingLeft="0dp"
        app:layout_constraintTop_toBottomOf="@+id/alarm_sounds">


        <TextView
            android:id="@+id/textViewTypeReto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/retoField"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/reto_spinner"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/login_form_ground"
            android:drawSelectorOnTop="true"
            android:entries="@array/array_reto_selected"
            android:textColor="@color/gray"
            android:textSize="18sp" />


    </LinearLayout>

    <Button
        android:id="@+id/acceptButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acceptButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarm_reto" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
>

        <Button
            android:id="@+id/button_alarms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/gray"
            android:backgroundTint="@color/black_low"
            android:text="@string/alarmsButton"
            android:textAllCaps="false"
            android:textColorHighlight="@color/black_low"
            android:textColorLink="@color/gray" />

        <Button
            android:id="@+id/button_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/gray"
            android:text="@string/eventsButton"
            android:textAllCaps="false"
            android:textColorLink="@color/gray" />

        <Button
            android:id="@+id/button_kinds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/gray"
            android:backgroundTint="@color/gray"
            android:text="@string/typeOfAlarmsButton"
            android:textAllCaps="false"
            android:textColorHighlight="@color/gray" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>