<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="0dp"
    tools:context=".AlarmsActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/superior"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/time"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/cyan_black"
            android:src="@drawable/logout"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="@id/button2"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createButton"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:rippleColor="@color/black_low" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/menu"
        app:layout_constraintTop_toBottomOf="@+id/superior">

        <LinearLayout
            android:id="@+id/alarm_item1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/login_form_back_ground"
            android:backgroundTint="@color/gray"
            android:orientation="horizontal"
            android:padding="0dp"
            android:paddingLeft="0dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:layout_marginRight="60dp"
                android:layout_marginBottom="80dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:text="@string/Alarm1Detail"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switch2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />


            <ImageButton
                android:id="@+id/imageButton"
                style="@android:style/Widget.DeviceDefault.ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="5dp"
                android:layout_weight="0"
                android:backgroundTint="@color/gray"
                android:clickable="true"
                android:src="@drawable/icon_close" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/alarm_item2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/login_form_back_ground"
            android:backgroundTint="@color/gray"
            android:orientation="horizontal"
            android:padding="0dp"
            android:paddingLeft="0dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:layout_marginRight="60dp"
                android:layout_marginBottom="80dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:text="@string/Alarm2Detail"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switch22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:checked="true"
                android:enabled="true" />


            <ImageButton
                android:id="@+id/imageButton1"
                style="@android:style/Widget.DeviceDefault.ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="5dp"
                android:layout_weight="0"
                android:backgroundTint="@color/gray"
                android:clickable="true"
                android:src="@drawable/icon_close" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/form">

        <Button
            android:id="@+id/button_alarms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/gray"
            android:backgroundTint="@color/black_low"
            android:text="@string/alarmsButton"
            android:textAllCaps="false"
            android:textColorHighlight="@color/black_low"
            android:textColorLink="@color/gray" />

        <Button
            android:id="@+id/button_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/gray"
            android:text="@string/eventsButton"
            android:textAllCaps="false"
            android:textColorLink="@color/gray" />

        <Button
            android:id="@+id/button_kinds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/gray"
            android:backgroundTint="@color/gray"
            android:text="@string/typeOfAlarmsButton"
            android:textAllCaps="false"
            android:textColorHighlight="@color/gray" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>